cleanup 'od-springboot-app'

--- a/od-springboot-app/readme.adoc
+++ b/od-springboot-app/readme.adoc
@@ -9,6 +9,6 @@ IntelliJ IDEA: open webapp/build.gradle
 == Usage
 * open a terminal and cd to the _webapp_ folder.
 * invoke `./gradlew bootRun`
-* point your browser to _http://localhost:8080/appContext/hello_
+* point your browser to _http://localhost:8080/appContext/hellodolphin_
 * Click on the _Greet_ button and the webpage should work as expected
 
